# function-calculator

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  Exceptions.h  Function.h  FunctionCalculator.h
resources/: CMakeLists.txt  File.txt
src/: CMakeLists.txt  FunctionCalculator.cpp  Ln.cpp  main.cpp
